
==== API changes ====
 * Removed deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Removed deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
 * Removed deprecated MethodOfMomentsFactory::set,getOptimizationProblem
 * ResourceMap::Set* methods no longer add new keys, the new Add* methods must be used instead
 * Removed OPTpp

=== Python module ===

=== Miscellaneous ===
 * Add Sample::getMarginal(Description)

=== Bug fixes ===
 * #1213 (The legend of the graphics in MetaModelValidation is wrong)
 * #1222 (There is no kriging example based on HMAT)
 * #1331 (FittingTest_BestModelBIC sometimes fail)
 * #1335 (The return of the unsafe ResourceMap)
 * #1337 (The rDiscrete function has no help page)
 * #1349 (Problem in the graph of Histogram)
 * #1351 (Text has a zero size)
 * #1354 (The doc of GeneralizedParetoFactory does not reflect the implementation)
 * #1371 (Memory leak in ot.TruncatedDistribution)
 * #1378 (Kriging-related covariance model weirdness)
 * #1384 (The ExprTk engine is not case-sensitive)
 * #1388 (Kolmogorov fails on a PythonDistribution)
 * #1390 (The doc for the `computeQuantile` method does not describe the optional `tail` argument)
 * #1403 (Python import otagrum throws an error)
 * #1404 (Bug in KrigingAlgorithm+hmat-oss)
 * #1405 (Most of the simulation algorithms for rare event fail on a coronavirus example)
 * #1416 (MethodOfMomentsFactory has no setOptimizationBounds method)
 * #1419 (BoundingVolumeHierarchy segaults/hangs)
 * #1423 (The computeSilvermanBandwidth of the HistogramFactory has no help)

== 1.14 release (2019-11-13) == #release-1.14

=== Library ===

==== IMPORTANT: Distributions parametrization changes ====
 * New argument ordering in Frechet ctor: scale(beta), shape(alpha), location(gamma) (swapped alpha and beta)
 * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)