@@ -1,7 +1,7 @@
 Distribution          =class=Histogram name=Histogram dimension=1 first=-1.5 width=class=Point name=Unnamed dimension=4 values=[1,0.7,1.2,0.9] height=class=Point name=Unnamed dimension=4 values=[0.0625,0.1875,0.4375,0.3125]
 Estimated distribution=class=Histogram name=Histogram dimension=1 first=-1.49739 width=class=Point name=Unnamed dimension=28 values=[0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609] height=class=Point name=Unnamed dimension=28 values=[0.0663672,0.0479318,0.0671046,0.0663672,0.0612053,0.0722665,0.0693168,0.143058,0.204263,0.180666,0.174029,0.182141,0.320775,0.418851,0.429912,0.418113,0.414426,0.460883,0.430649,0.432124,0.413689,0.390829,0.285379,0.313401,0.331098,0.314875,0.337735,0.326674]
 Default distribution=class=Histogram name=Histogram dimension=1 first=0 width=class=Point name=Unnamed dimension=1 values=[1] height=class=Point name=Unnamed dimension=1 values=[1]
-Silverman bandwidth=0.14315
+Bandwidth=0.14315
 Histogram          =class=Histogram name=Histogram dimension=1 first=-1.5 width=class=Point name=Unnamed dimension=4 values=[1,0.7,1.2,0.9] height=class=Point name=Unnamed dimension=4 values=[0.0625,0.1875,0.4375,0.3125]
 Estimated histogram=class=Histogram name=Histogram dimension=1 first=-1.49739 width=class=Point name=Unnamed dimension=28 values=[0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609,0.135609] height=class=Point name=Unnamed dimension=28 values=[0.0663672,0.0479318,0.0671046,0.0663672,0.0612053,0.0722665,0.0693168,0.143058,0.204263,0.180666,0.174029,0.182141,0.320775,0.418851,0.429912,0.418113,0.414426,0.460883,0.430649,0.432124,0.413689,0.390829,0.285379,0.313401,0.331098,0.314875,0.337735,0.326674]
 Histogram          =class=Histogram name=Histogram dimension=1 first=-1.5 width=class=Point name=Unnamed dimension=4 values=[1,0.7,1.2,0.9] height=class=Point name=Unnamed dimension=4 values=[0.0625,0.1875,0.4375,0.3125]
