@@ -11,5 +11,5 @@ Estimated histogram= Histogram(origin = -2, {w0 = 1, h0 = 0.0306}, {w1 = 1, h1 =
 Default histogram= Histogram(origin = 0, {w0 = 1, h0 = 1})
 Estimated distribution= class=Histogram name=Histogram dimension=1 first=-5e-13 width=class=Point name=Unnamed dimension=1 values=[1e-12] height=class=Point name=Unnamed dimension=1 values=[1e+12]
 Estimated distribution= class=Histogram name=Histogram dimension=1 first=1 width=class=Point name=Unnamed dimension=1 values=[1e-12] height=class=Point name=Unnamed dimension=1 values=[1e+12]
-silverman useQuantile= True [4.12126e-09]
-silverman useQuantile= False [0.0150595]
+useQuantile= True [4.12126e-09]
+useQuantile= False [0.0150595]
